// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardBodyContent renders no children when inactive by default 1`] = `
<div
  className="fade tab-pane"
  data-testid="wizard-tab-pane"
  role="tabpanel"
/>
`;

exports[`WizardBodyContent renders the default structure correctly 1`] = `
<div
  className="fade tab-pane"
  data-testid="wizard-tab-pane"
  role="tabpanel"
/>
`;

exports[`WizardBodyContent renders with children when active 1`] = `
<div
  className="fade tab-pane active show"
  data-testid="wizard-tab-pane"
  role="tabpanel"
>
  <div>
    My Child
  </div>
</div>
`;
